--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@react-pdf/renderer": "^4.0.0",
+    "@react-pdf-viewer/core": "^3.12.0",
     "jspdf": "^2.5.2",
-    "pdfjs-dist": "^4.4.168",
+    "pdfjs-dist": "^3.4.120",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-pdf": "^9.1.1",
